--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactwebapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://syedacodes.github.io/reactstyledcompwebsite",
   "dependencies": {
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
